<resources>
    <string name="app_name">Jobs App</string>
    <string name="login_activity_label">Login</string>
    <string name="register_activity_label">Set Up Account Profile</string>
    <string name="myposts_activity_label">My Posts</string>
    <string name="post_job_activity_label">Create Job Post</string>
    <string name="main_activity_label">Job Posts</string>
    <string name="post_detail_activity_label">Job Post Details</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="auth_username_hint">Enter Your Email</string>
    <string name="auth_password_hint">Enter Your Password</string>
    <string name="auth_button_login_text">Login</string>
    <string name="auth_button_register_text">Finish</string>
    <string name="auth_button_fb_login">Login with facebook</string>
    <string name="register_fullname_hint">Enter Your full name</string>
    <string name="register_phonenumber_hint">Enter Your Phone Number</string>
    <string name="register_email_hint">Enter Your Email Address (Optional)</string>
    <string name="register_confirm_pass_hint">Confirm password</string>
    <string name="post_job_title_hint">Title</string>
    <string name="post_job_desc_hint">Description</string>
    <string name="post_job_price_hint">Salary</string>
    <string name="post_job_deadline_hint">Select Deadline</string>
    <string name="post_job_location_hint">Type Your Location...</string>
    <string name="post_job_button_next">Submit</string>
    <string name="post_job_image_logo">Logged in user pic</string>
    <string name="vertical_ellipsis">&#8942;</string>

    <string name="facebook_app_id">296967707496471</string>
    <string name="fb_login_protocol_scheme">fb296967707496471</string>
    <string name="nav_header_email">jobsapp@njerucyrus.com</string>
    <string name="typing">typing ...</string>
    <string name="online">online</string>
    <string name="label_chats">Chats</string>
    <string name="enter_your_phone_number_to_continue">Enter your phone number to continue</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="btn_verify">Verify</string>
    <string name="login_with_phone_number">Login With Phone Number</string>
    <string name="setup_acc_profile">Set up Account profile to continue</string>


    <string-array name="caterory_array">
        <item>Select Category</item>
        <item>Wash,Clean and Stitch</item>
        <item>Install,Repair and Decorate</item>
        <item>Transport and Delivery</item>
        <item>House chores</item>
        <item>Academic</item>
        <item>Queuing</item>
        <item>Mobile and Computer Services</item>
        <item>For the Young Ones</item>
        <item>General (Storage)</item>
    </string-array>
</resources>
