<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.me.njerucyrus.jobsapp2.ProfileActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGrey"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorLightGrey"
            >
            <TextView
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setup_acc_profile"
                android:textSize="24sp"
                android:textColor="@color/colorBlack"
                />

            <ImageView
                android:id="@+id/app_logo_profile"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/app_logo"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:drawablePadding="5dp"
                android:background="@drawable/round_edit_text"
                >

                <EditText
                    android:id="@+id/txtFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_fullname_hint"
                    android:drawableStart="@drawable/ic_perm_identity_black_32dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:background="@null"
                    android:inputType="textPersonName"

                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:drawablePadding="5dp"

                android:background="@drawable/round_edit_text"
                >

                <EditText
                    android:id="@+id/txtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_phonenumber_hint"
                    android:drawableStart="@drawable/ic_phone_black_32dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:inputType="phone"
                    android:background="@null"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:drawablePadding="5dp"
                android:background="@drawable/round_edit_text"
                >

                <EditText
                    android:id="@+id/txtEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_email_hint"
                    android:drawableStart="@drawable/ic_mail_outline_black_32dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:inputType="textEmailAddress"
                    android:background="@null"
                    />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_button_register_text"
                android:background="@drawable/round_button"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:drawableRight="@drawable/ic_arrow_forward_white_24dp"
                android:drawablePadding="15dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"

                />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
