<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.me.njerucyrus.jobsapp2.PostJobStep1Activity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Spinner
            android:layout_marginTop="10dp"
            android:id="@+id/category_spinner"
            android:layout_width="fill_parent"
            android:layout_height="42dp"
            android:background="@xml/round_edit_text"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingLeft="15dp"
            >

        </Spinner>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:drawablePadding="5dp"

            android:background="@xml/round_edit_text"
            >

            <EditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_job_desc_hint"
                android:drawableStart="@drawable/ic_info_outline_black_32dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:inputType="textMultiLine"
                android:background="@null"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:drawablePadding="5dp"

            android:background="@xml/round_edit_text"
            >

            <EditText
                android:id="@+id/txtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_job_price_hint"
                android:drawableStart="@drawable/ic_attach_money_black_32dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:inputType="numberDecimal"
                android:background="@null"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:drawablePadding="5dp"

            android:background="@xml/round_edit_text"
            >

            <EditText
                android:id="@+id/txtDeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_job_deadline_hint"
                android:drawableStart="@drawable/ic_access_time_black_32dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:inputType="date"
                android:background="@null"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:drawablePadding="5dp"

            android:background="@xml/round_edit_text"
            >

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_job_location_hint"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:inputType="text"
                android:background="@null"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
            android:background="@xml/round_button"
            android:text="@string/post_job_button_next"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:drawablePadding="10dp"
            />


    </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
