<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.me.njerucyrus.jobsapp2.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGrey"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorLightGrey"
            android:id="@+id/login_layout"

            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:background="@xml/round_edit_text"

                android:drawablePadding="5dp">

                <EditText
                    android:id="@+id/txtAuthUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_perm_identity_black_32dp"
                    android:hint="@string/auth_username_hint"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"

                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@xml/round_edit_text"
                android:drawablePadding="5dp">

                <EditText
                    android:id="@+id/txtAuthPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_lock_outline_black_32dp"
                    android:hint="@string/auth_password_hint"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"

                    />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnAuthLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"

                android:background="@xml/round_button"
                android:text="@string/auth_button_login_text"
                android:textColor="@color/colorWhite"

                />



            <Button
                android:id="@+id/btnAuthCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"

                android:background="@xml/round_button_red"
                android:text="@string/auth_button_register_text"
                android:textColor="@color/colorWhite"

                />

            <com.google.android.gms.common.SignInButton
                android:id='@+id/login_with_google'
                android:layout_width='match_parent'
                android:layout_height='wrap_content'
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
